infra/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: contoso-air-web
  labels:
    app: contoso-air-web
    component: web-server
    version: v1
    app.kubernetes.io/name: contoso-air
    app.kubernetes.io/component: web-server
    app.kubernetes.io/part-of: contoso-air-platform
    app.kubernetes.io/managed-by: kubectl
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: contoso-air-web
